examples/bad/auto_return5.latf
auto f() {
    // error - empty function body
}

int main() {
    return 0;
}